--- a/E-commerce/views/index_signed.ejs
+++ b/E-commerce/views/index_signed.ejs
@@ -19,8 +19,8 @@
     <div class="account">
       <!-- <a href="/sign-in"><button class="sign-in"> Sign-In</button></a>
       <a href="/sign-up"><button class="sign-up"> Sign-Up</button></a> -->
-      <a href="/" style="text-decoration: none;"><span>Hello,<%= user.username %></span></a>
-      <a href="/" style="text-decoration: none;"><span>Log Out</span></a>
+      <a href="/" style="text-decoration: none;"><span>Hello,<%= user.username%></span></a>
+      <a href="/logout" style="text-decoration: none;"><span>Log Out</span></a>
     </div>
       
   </header>
