--- a/E-commerce/views/sign-up.ejs
+++ b/E-commerce/views/sign-up.ejs
@@ -34,7 +34,7 @@
 					</div>
 					<div class="div">
 							<h5>E-mail</h5>
-							<input type="email" class="input" name="mail" required>
+							<input type="email" class="input" name="email" required>
 					</div>
 				 </div>
            		<div class="input-div pass">
