--- a/E-commerce/views/sign-in.ejs
+++ b/E-commerce/views/sign-in.ejs
@@ -21,7 +21,7 @@
 				<h2 class="title">Welcome</h2>
            		<div class="input-div one">
            		   <div class="i">
-           		   		<!-- <i class="fas fa-user"></i> -->
+           		   		<i class="fas fa-user"></i>
            		   </div>
            		   <div class="div">
            		   		<h5>E-mail</h5>
@@ -32,7 +32,7 @@
 				   
            		<div class="input-div pass">
            		   <div class="i"> 
-           		    	<!-- <i class="fas fa-lock"></i> -->
+           		    	<i class="fas fa-lock"></i>
            		   </div>
 					  
            		   <div class="div">
