Minor modifications and sign-in completed

--- a/E-commerce/views/sign-in.ejs
+++ b/E-commerce/views/sign-in.ejs
@@ -24,8 +24,8 @@
            		   		<i class="fas fa-user"></i>
            		   </div>
            		   <div class="div">
-           		   		<h5>E-mail</h5>
-           		   		<input type="mail" class="input" name="email" required>
+           		   		<h5>Username</h5>
+           		   		<input type="text" class="input" name="username" required>
 							  
            		   </div>
            		</div>
