--- a/E-commerce/views/index.ejs
+++ b/E-commerce/views/index.ejs
@@ -17,8 +17,8 @@
   <header class="hero">
     <div class="account">
       <% if(currentUser){ %>
-        <a href="/" class="sign-in" style="text-decoration: none;"><span>Hello, <%= currentUser.username%></span></a>
-        <a href="/logout" class="sign-in" style="text-decoration: none;"><span>Log Out</span></a>
+        <a href="/" class="sign-in_1" style="text-decoration: none;"><span>Hello, <%= currentUser.username%></span></a>
+        <a href="/logout" class="sign-up_1" style="text-decoration: none;"><span>Log Out</span></a>
         <%} else{ %>
           <a href="/sign-in"><button class="sign-in"> Sign-In</button></a>
           <a href="/sign-up"><button class="sign-up"> Sign-Up</button></a>
