--- a/E-commerce/public/css/main.css
+++ b/E-commerce/public/css/main.css
@@ -273,25 +273,7 @@ section {
   font-weight:700;
   letter-spacing:2px;
 }
-.sign-in_1{
-  font-family: 'Harry Potter', sans-serif;
-  /* padding: 20px;                                                */
-  width: 135px;
-  height: 60px;
-  /* border-radius: 50px; */
-  margin-left:10px;
-  outline: none;
-  margin: 10px;
-  border: none;
-  font-size:1.1rem;
-  color:#efdc97;
-  background-color:black;
-  font-weight:700;
-  letter-spacing:2px;
-}
-.sign-in_1 span{
-  /* padding: 30px; */
-}
+
 
 .sign-up{
   font-family: 'Harry Potter', sans-serif;
@@ -308,13 +290,13 @@ section {
   background-color:black;
   font-weight:700;
   letter-spacing:2px;
-
+  
  
   
 }
-.sign-up_1{
+.six{
   font-family: 'Harry Potter', sans-serif;
-                                                
+  padding: 10px 20px;                                              
   width: 150px;
   height: 60px;
   /* border-radius: 50px; */
@@ -327,9 +309,25 @@ section {
   background-color:black;
   font-weight:700;
   letter-spacing:2px;
-
+  text-decoration: none;
  
   
+}
+.seven{
+  font-family: 'Harry Potter', sans-serif;
+  padding: 10px 20px;                                               
+  width: 135px;
+  height: 60px;
+  /* border-radius: 50px; */
+  margin-left:10px;
+  outline: none;
+  margin: 10px;
+  border: none;
+  font-size:1.1rem;
+  color:#efdc97;
+  background-color:black;
+  font-weight:700;
+  letter-spacing:2px;
 }
 .sign-in:hover{
   transform: scale(1.2);
@@ -341,16 +339,7 @@ section {
   transition: all;
   transition-duration: 0.5s;
 }
-.sign-in_1:hover{
-  transform: scale(1.2);
-  transition: all;
-  transition-duration: 0.5s;
-}
-.sign-up_1:hover{
-  transform: scale(1.2);
-  transition: all;
-  transition-duration: 0.5s;
-}
+
 header{
   padding: 45px !important;
 }
