--- a/E-commerce/views/index.ejs
+++ b/E-commerce/views/index.ejs
@@ -36,7 +36,7 @@
           <% books.forEach((book)=>{%>
             <a href="/<%=book._id %>" class="featured__item">
               <img src="<%= book.bookimage %>" alt="" class="featured__img">
-              <p class="featured__details"><span class="price">$20</span><strong class="title">
+              <p class="featured__details"><span class="price">₹1000</span><strong class="title">
                   <%= book.bookname %>
                 </strong></p>
             </a>
