--- a/E-commerce/views/checkout.ejs
+++ b/E-commerce/views/checkout.ejs
@@ -25,7 +25,7 @@
                 <h3>City:<em class="copy"> <%= bill.city %></em></h3>
                 <h3>Country:<em class="copy"><%= bill.country %></em></h3>
                 <h3>Book Name:<em class="copy"><%= bill.book.bookname %></em></h3>
-                <h3>Bill Amount:<em class="copy"><%= bill.cost %>$</em></h3>
+                <h3>Bill Amount:<em class="copy">₹ <%= bill.cost %></em></h3>
                 <a href="/<%= bill._id %>/bill/checkout/pay" style="text-decoration: none;"><input type="submit" class="btn" value="Checkout"  ></a>
             </div>
               
