--- a/E-commerce/views/index.ejs
+++ b/E-commerce/views/index.ejs
@@ -48,9 +48,24 @@
       </div>
     </section>
 
-    <footer>
-
-    </footer>
+    <!-- <footer>
+      <div class="row">
+        <div class="column col1">
+          <h2>Address:</h2>
+          <h5>Sesame Street, San Fransisco,USA</h5>
+          <h2>Contact Number:</h2>
+          <h5>9486641237</h5>
+          
+        </div>
+        <div class="column col2">
+          <a href="#" class="fa fa-facebook"></a>
+          <a href="#" class="fa fa-twitter"></a>
+          <a href="#" class="fa fa-google"></a>
+        </div>
+        <h4></h4>
+      </div>
+    
+    </footer> -->
 
   </main>
 
