--- a/Flask app/templates/includes/_navbar.html
+++ b/Flask app/templates/includes/_navbar.html
@@ -12,7 +12,13 @@
           <li><a class="nav-link scrollto" href="#about">About</a></li>
           <li><a class="nav-link scrollto" href="#services">Services</a></li>
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
-          <li><a class="getstarted scrollto" href="#about">Get Started</a></li>
+          {% if session["username"] %}
+              <li>{{session["username"]}}</li>
+              <li><a class="getstarted scrollto" href="/logout">Logout</a></li>
+          {% else %}
+            <li><a class="getstarted scrollto" href="/login">Login</a></li>
+            <li><a class="getstarted scrollto" href="/register">Sign up</a></li>
+          {% endif %}
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav>
