--- a/E-commerce/views/photo.ejs
+++ b/E-commerce/views/photo.ejs
@@ -24,8 +24,9 @@
             </div>
             <div class="button-panel">
                 <button class="btn btn-info capture" onclick="showPreview()">Capture </button>
-                <button class="btn btn-info hide save" onclick="savePhoto()"><a href="/<%= billId%>/bill/checkout/pay">Save</a></button>
+                <button class="btn btn-info hide save"><a href="/<%= billId%>/bill/checkout/pay">Save</a></button>
                 <button class="btn btn-info clear" onclick="clearPic()">Clear</button>
+                <h1 style="display: none;" id="url_id"><%=billId%></h1>
             </div>
         </div>
     </div>
@@ -33,8 +34,8 @@
 
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/webcamjs/1.0.26/webcam.js" integrity="sha512-AQMSn1qO6KN85GOfvH6BWJk46LhlvepblftLHzAv1cdIyTWPBKHX+r+NOXVVw6+XQpeW4LJk/GTmoP48FLvblQ==" crossorigin="anonymous"></script>
-
-    <script language="JavaScript">
+    <script src="/js/photo.js"></script>
+    <!-- <script language="JavaScript">
 
         // load webcam
         Webcam.set({
@@ -76,7 +77,7 @@
             
 
         }
-    </script>
+    </script> -->
 
 </body>
 </html>
