--- a/E-commerce/views/pay.ejs
+++ b/E-commerce/views/pay.ejs
@@ -12,7 +12,7 @@
 	<div class="container">
 		
 		<div class="login-content">
-			<form action="/<%=bill.book._id%>/bill/checkout/pay" method="POST" class="pay_form">
+			<form action="/<%=bill._id%>/bill/checkout/pay" method="POST" class="pay_form">
 				<h2 class="title">Payment</h2>
                                 <div class="input-div one">
                                         <div class="i">
