--- a/Flask app/templates/includes/_navbar.html
+++ b/Flask app/templates/includes/_navbar.html
@@ -1,7 +1,7 @@
 <header id="header" class="header fixed-top">
     <div class="container-fluid px-3 px-sm-5 container-xl d-flex align-items-center justify-content-between">
 
-      <a href="index.html" class="logo d-flex align-items-center">
+      <a href="/" class="logo d-flex align-items-center">
         <img src="{{ url_for('static',filename='img/logo.png') }}" alt="">
         <span>Bank4You</span>
       </a>
